Add dimension type

--- a/package.yaml
+++ b/package.yaml
@@ -37,6 +37,7 @@ default-extensions:
   - DeriveFunctor
   - DeriveGeneric
   - FlexibleInstances
+  - GeneralizedNewtypeDeriving
   - LambdaCase
   - MultiParamTypeClasses
   - MultiWayIf
