--- a/package.yaml
+++ b/package.yaml
@@ -1,10 +1,10 @@
 name:                space
 version:             0.1.0.0
-#github:              "githubuser/space"
-#license:             BSD3
-#author:              "Author name here"
-#maintainer:          "example@example.com"
-#copyright:           "2018 Author name here"
+github:              "vtan/space"
+license:             MIT
+author:              "Viktor Tanyi"
+maintainer:          "Viktor Tanyi <tanyi.viktor@gmail.com>"
+copyright:           "2018 Viktor Tanyi"
 
 extra-source-files:
 #- README.md
@@ -17,7 +17,7 @@ extra-source-files:
 # To avoid duplicated efforts in documentation and dealing with the
 # complications of embedding Haddock markup inside cabal files, it is
 # common to point users to the README.md file.
-#description:         Please see the README on GitHub at <https://github.com/githubuser/space#readme>
+description:         Please see the README on GitHub at <https://github.com/githubuser/space#readme>
 
 dependencies:
   - base >= 4.7 && < 5
