--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,9 @@
 language: generic
 
+os:
+  - linux
+  - osx
+
 env:
   - LD_LIBRARY_PATH=/usr/local/lib
 
@@ -13,21 +17,28 @@ addons:
       - libgmp-dev
 
 before_install:
-  - wget -q http://libsdl.org/release/SDL2-2.0.4.tar.gz -O - | tar xz
-  - wget -q http://www.libsdl.org/projects/SDL_ttf/release/SDL2_ttf-2.0.12.tar.gz -O - | tar xz
-  - cd SDL2-2.0.4 && ./configure && make -j && sudo make install && cd ..
-  - cd SDL2_ttf-2.0.12 && ./configure && make -j && sudo make install && cd ..
-  - mkdir -p ~/.local/bin
-  - export PATH=$HOME/.local/bin:$PATH
-  - travis_retry curl -L https://get.haskellstack.org/stable/linux-x86_64.tar.gz | tar xz --wildcards --strip-components=1 -C ~/.local/bin '*/stack'
+  - |
+    if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then
+      wget -q http://libsdl.org/release/SDL2-2.0.4.tar.gz -O - | tar xz
+      wget -q http://www.libsdl.org/projects/SDL_ttf/release/SDL2_ttf-2.0.12.tar.gz -O - | tar xz
+      cd SDL2-2.0.4 && ./configure && make -j && sudo make install && cd ..
+      cd SDL2_ttf-2.0.12 && ./configure && make -j && sudo make install && cd ..
+    fi
+  - |
+    if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then
+      mkdir -p ~/.local/bin
+      export PATH=$HOME/.local/bin:$PATH
+      travis_retry curl -L https://get.haskellstack.org/stable/linux-x86_64.tar.gz \
+        | tar xz --wildcards --strip-components=1 -C ~/.local/bin '*/stack'
+    fi
+  - |
+    if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then
+      brew update
+      brew install haskell-stack pkg-config sdl2 sdl2_ttf
+    fi
 
 install:
   - stack --no-terminal --install-ghc build --only-dependencies
 
 script:
   - stack --no-terminal build
-
-notifications:
-  email:
-    on_success: never
-    on_failure: always
