--- a/package.yaml
+++ b/package.yaml
@@ -21,6 +21,8 @@ description:         Please see the README on GitHub at <https://github.com/gith
 
 dependencies:
   - base >= 4.7 && < 5
+  - aeson
+  - bytestring
   - containers
   - generic-lens
   - hashable
@@ -56,6 +58,7 @@ default-extensions:
   - OverloadedStrings
   - PatternSynonyms
   - RankNTypes
+  - RecordWildCards
   - ScopedTypeVariables
   - StrictData
   - TupleSections
