--- a/.travis.yml
+++ b/.travis.yml
@@ -53,11 +53,14 @@ install:
 
 script:
   - stack --no-terminal build
+  - |
+    if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then
+      bash bundle/osx.sh
+    fi
 
 before_deploy:
   - |
     if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then
-      bash bundle/osx.sh
       export DEPLOY_FILE=space-osx.zip
     fi
 
