--- a/package.yaml
+++ b/package.yaml
@@ -44,6 +44,7 @@ default-extensions:
   - DeriveGeneric
   - DeriveTraversable
   - FlexibleContexts
+  - FlexibleInstances
   - GeneralizedNewtypeDeriving
   - InstanceSigs
   - LambdaCase
