Layout improvements, system map integration

--- a/package.yaml
+++ b/package.yaml
@@ -39,6 +39,7 @@ dependencies:
 
 default-extensions:
   - BangPatterns
+  - BlockArguments
   - ConstraintKinds
   - DeriveFunctor
   - DeriveGeneric
