--- a/package.yaml
+++ b/package.yaml
@@ -44,6 +44,7 @@ default-extensions:
   - DeriveFunctor
   - DeriveGeneric
   - DeriveTraversable
+  - DuplicateRecordFields
   - FlexibleContexts
   - FlexibleInstances
   - GeneralizedNewtypeDeriving
